--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="scr.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+    <br>
+    <br>
+    <br>
+    <br>
+    
+    <div class="box">
+        <h1>PuriLyser</h1>
+        <br>
+        <br>
+        <input type="number" step="0.001" placeholder="Dry Weight(Weight in air)" id="i1">
+        <br>
+        <br>
+        <input type="number" step="0.001" placeholder="Weight in Diesel" id="i2" >
+        <br>
+        <br>
+        <button id="s">SUBMIT</button>
+        <h2 class="result"></h2>
+    </div>
+
+    <script src="scc.js"></script>
+</body>
+
+</html>
