--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <input type="number" step="0.001" placeholder="Weight in Diesel" id="i2" >
         <br>
         <br>
+        <input type="number" step="0.0001" placeholder="Density of Fluid" id="i3" >
+        <br>
+        <br>
         <button id="s">SUBMIT</button>
         <h2 class="result"></h2>
     </div>
