--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
         <input type="number" step="0.001" placeholder="Weight in Diesel" id="i2" >
         <br>
         <br>
-        <input type="number" step="0.0001" placeholder="Density of Fluid" id="i3" >
+        <input type="number" placeholder="No of Balls" id="i4" >
         <br>
         <br>
+        <input type="number" step="0.001" placeholder="Diameter of Ball(mm)" id="i5" >
+        <br>
+        <br>
+        <!-- <input type="number" step="0.0001" placeholder="Density of Fluid" id="i3" >
+        <br>
+        <br> -->
         <button id="s">SUBMIT</button>
         <h2 class="result"></h2>
     </div>
